apps/monitoring/kube-prometheus-stack/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: kube-prometheus-stack
      namespace: monitoring
      sectionName: kube-prometheus-stack-alertmanager
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: kube-prometheus-stack
      namespace: monitoring
      sectionName: kube-prometheus-stack-prometheus
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
      matches:
        - path:
            type: PathPrefix
            value: /
